--- a/Regression_analysis.ipynb
+++ b/Regression_analysis.ipynb
@@ -462,7 +462,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faa20c8f250>]"
+       "[<matplotlib.lines.Line2D at 0x7f9f21416310>]"
       ]
      },
      "execution_count": 6,
@@ -508,7 +508,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faa33d91880>]"
+       "[<matplotlib.lines.Line2D at 0x7f9f10460910>]"
       ]
      },
      "execution_count": 7,
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faa33e6f700>]"
+       "[<matplotlib.lines.Line2D at 0x7f9f104be7c0>]"
       ]
      },
      "execution_count": 8,
@@ -641,8 +641,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -654,7 +656,7 @@
       "Model:                              OLS   Adj. R-squared:                  0.708\n",
       "Method:                   Least Squares   F-statistic:                     48.79\n",
       "Date:                  Tue, 07 Dec 2021   Prob (F-statistic):           3.93e-17\n",
-      "Time:                          18:31:21   Log-Likelihood:                -57.909\n",
+      "Time:                          23:36:19   Log-Likelihood:                -57.909\n",
       "No. Observations:                    74   AIC:                             123.8\n",
       "Df Residuals:                        70   BIC:                             133.0\n",
       "Df Model:                             3                                         \n",
@@ -692,8 +694,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -705,7 +709,7 @@
       "Model:                              OLS   Adj. R-squared:                  0.678\n",
       "Method:                   Least Squares   F-statistic:                     44.55\n",
       "Date:                  Tue, 07 Dec 2021   Prob (F-statistic):           3.22e-16\n",
-      "Time:                          19:05:42   Log-Likelihood:                -61.492\n",
+      "Time:                          23:36:19   Log-Likelihood:                -61.492\n",
       "No. Observations:                    74   AIC:                             131.0\n",
       "Df Residuals:                        70   BIC:                             140.2\n",
       "Df Model:                             3                                         \n",
@@ -743,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +760,7 @@
       "Model:                              OLS   Adj. R-squared:                  0.642\n",
       "Method:                   Least Squares   F-statistic:                     39.60\n",
       "Date:                  Tue, 07 Dec 2021   Prob (F-statistic):           4.46e-15\n",
-      "Time:                          19:06:46   Log-Likelihood:                -65.431\n",
+      "Time:                          23:36:19   Log-Likelihood:                -65.431\n",
       "No. Observations:                    74   AIC:                             138.9\n",
       "Df Residuals:                        70   BIC:                             148.1\n",
       "Df Model:                             3                                         \n",
@@ -789,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +806,7 @@
       "Model:                              OLS   Adj. R-squared:                  0.723\n",
       "Method:                   Least Squares   F-statistic:                     57.15\n",
       "Date:                  Tue, 07 Dec 2021   Prob (F-statistic):           8.65e-19\n",
-      "Time:                          19:06:53   Log-Likelihood:                -56.002\n",
+      "Time:                          23:36:19   Log-Likelihood:                -56.002\n",
       "No. Observations:                    74   AIC:                             120.0\n",
       "Df Residuals:                        70   BIC:                             129.2\n",
       "Df Model:                             3                                         \n",
@@ -840,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +857,7 @@
       "Model:                              OLS   Adj. R-squared:                  0.712\n",
       "Method:                   Least Squares   F-statistic:                     37.83\n",
       "Date:                  Tue, 07 Dec 2021   Prob (F-statistic):           9.95e-17\n",
-      "Time:                          18:49:02   Log-Likelihood:                -56.879\n",
+      "Time:                          23:36:19   Log-Likelihood:                -56.879\n",
       "No. Observations:                    74   AIC:                             123.8\n",
       "Df Residuals:                        69   BIC:                             135.3\n",
       "Df Model:                             4                                         \n",
@@ -892,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -903,27 +907,27 @@
      "text": [
       "                             OLS Regression Results                             \n",
       "================================================================================\n",
-      "Dep. Variable:     avg_complaints_17_19   R-squared:                       0.701\n",
-      "Model:                              OLS   Adj. R-squared:                  0.688\n",
-      "Method:                   Least Squares   F-statistic:                     41.01\n",
-      "Date:                  Tue, 07 Dec 2021   Prob (F-statistic):           2.08e-15\n",
-      "Time:                          18:50:10   Log-Likelihood:                -60.301\n",
-      "No. Observations:                    74   AIC:                             128.6\n",
-      "Df Residuals:                        70   BIC:                             137.8\n",
+      "Dep. Variable:     avg_complaints_17_19   R-squared:                       0.636\n",
+      "Model:                              OLS   Adj. R-squared:                  0.620\n",
+      "Method:                   Least Squares   F-statistic:                     29.28\n",
+      "Date:                  Tue, 07 Dec 2021   Prob (F-statistic):           2.22e-12\n",
+      "Time:                          23:36:19   Log-Likelihood:                -67.631\n",
+      "No. Observations:                    74   AIC:                             143.3\n",
+      "Df Residuals:                        70   BIC:                             152.5\n",
       "Df Model:                             3                                         \n",
       "Covariance Type:                    HC1                                         \n",
-      "=========================================================================================\n",
-      "                            coef    std err          z      P>|z|      [0.025      0.975]\n",
-      "-----------------------------------------------------------------------------------------\n",
-      "Intercept             -3.192e-16      0.065  -4.89e-15      1.000      -0.128       0.128\n",
-      "avg_black_frac            0.1806      0.113      1.599      0.110      -0.041       0.402\n",
-      "avg_liveswspouse_frac    -0.4454      0.090     -4.960      0.000      -0.621      -0.269\n",
-      "avg_bachelors_frac       -0.4264      0.074     -5.729      0.000      -0.572      -0.281\n",
+      "============================================================================================\n",
+      "                               coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------------------\n",
+      "Intercept                -3.192e-16      0.072  -4.43e-15      1.000      -0.141       0.141\n",
+      "avg_black_frac               0.3829      0.112      3.424      0.001       0.164       0.602\n",
+      "avg_liveswunmarried_frac     0.3151      0.080      3.917      0.000       0.157       0.473\n",
+      "avg_bachelors_frac          -0.6417      0.121     -5.288      0.000      -0.879      -0.404\n",
       "==============================================================================\n",
-      "Omnibus:                        1.886   Durbin-Watson:                   1.622\n",
-      "Prob(Omnibus):                  0.390   Jarque-Bera (JB):                1.213\n",
-      "Skew:                           0.170   Prob(JB):                        0.545\n",
-      "Kurtosis:                       3.527   Cond. No.                         2.29\n",
+      "Omnibus:                        3.585   Durbin-Watson:                   1.419\n",
+      "Prob(Omnibus):                  0.167   Jarque-Bera (JB):                2.760\n",
+      "Skew:                           0.411   Prob(JB):                        0.252\n",
+      "Kurtosis:                       3.469   Cond. No.                         2.39\n",
       "==============================================================================\n",
       "\n",
       "Warnings:\n",
@@ -932,14 +936,14 @@
     }
    ],
    "source": [
-    "lin_reg = sm.OLS.from_formula('avg_complaints_17_19 ~ avg_black_frac + avg_liveswspouse_frac + avg_bachelors_frac', data=reg_df_scaled).fit(cov_type='HC1')\n",
+    "lin_reg = sm.OLS.from_formula('avg_complaints_17_19 ~ avg_black_frac + avg_liveswunmarried_frac + avg_bachelors_frac', data=reg_df_scaled).fit(cov_type='HC1')\n",
     "print(lin_reg.summary())\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +956,7 @@
       "Model:                              OLS   Adj. R-squared:                  0.688\n",
       "Method:                   Least Squares   F-statistic:                     41.01\n",
       "Date:                  Tue, 07 Dec 2021   Prob (F-statistic):           2.08e-15\n",
-      "Time:                          18:50:21   Log-Likelihood:                -60.301\n",
+      "Time:                          23:36:19   Log-Likelihood:                -60.301\n",
       "No. Observations:                    74   AIC:                             128.6\n",
       "Df Residuals:                        70   BIC:                             137.8\n",
       "Df Model:                             3                                         \n",
@@ -992,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1009,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.695\n",
       "Method:                 Least Squares   F-statistic:                     56.52\n",
       "Date:                Tue, 07 Dec 2021   Prob (F-statistic):           1.13e-18\n",
-      "Time:                        18:31:21   Log-Likelihood:                -59.478\n",
+      "Time:                        23:36:19   Log-Likelihood:                -59.478\n",
       "No. Observations:                  74   AIC:                             127.0\n",
       "Df Residuals:                      70   BIC:                             136.2\n",
       "Df Model:                           3                                         \n",
@@ -1051,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1088,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.698\n",
       "Method:                 Least Squares   F-statistic:                     43.26\n",
       "Date:                Tue, 07 Dec 2021   Prob (F-statistic):           4.02e-18\n",
-      "Time:                        18:31:21   Log-Likelihood:                -58.564\n",
+      "Time:                        23:36:19   Log-Likelihood:                -58.564\n",
       "No. Observations:                  74   AIC:                             127.1\n",
       "Df Residuals:                      69   BIC:                             138.6\n",
       "Df Model:                           4                                         \n",
@@ -1123,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1161,7 @@
       "Method:                       Two Stage   F-statistic:                     56.92\n",
       "                          Least Squares   Prob (F-statistic):           9.53e-19\n",
       "Date:                  Tue, 07 Dec 2021                                         \n",
-      "Time:                          18:31:21                                         \n",
+      "Time:                          23:36:19                                         \n",
       "No. Observations:                    74                                         \n",
       "Df Residuals:                        70                                         \n",
       "Df Model:                             3                                         \n",
@@ -1192,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1210,7 @@
       "Method:                       Two Stage   F-statistic:                     43.33\n",
       "                          Least Squares   Prob (F-statistic):           3.87e-18\n",
       "Date:                  Tue, 07 Dec 2021                                         \n",
-      "Time:                          18:31:21                                         \n",
+      "Time:                          23:36:19                                         \n",
       "No. Observations:                    74                                         \n",
       "Df Residuals:                        69                                         \n",
       "Df Model:                             4                                         \n",
@@ -1242,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1260,7 @@
       "Method:                       Two Stage   F-statistic:                     50.20\n",
       "                          Least Squares   Prob (F-statistic):           9.89e-20\n",
       "Date:                  Tue, 07 Dec 2021                                         \n",
-      "Time:                          18:31:21                                         \n",
+      "Time:                          23:36:19                                         \n",
       "No. Observations:                    74                                         \n",
       "Df Residuals:                        69                                         \n",
       "Df Model:                             4                                         \n",
